--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         
         .subtitle {
             font-size: 16px;
-            color: gold;
+            color: #b266ff;
             padding: 0px;
         }
     
